# animalSayRust

./: Cargo.toml  README.md  animal.txt
src/: main.rs
tests/: integration_tests.rs
