[package]
name = "animalsay"
version = "0.1.0"
authors = ["exonaki <rsanyal17@yahoo.co.in>"]
edition = "2018"
description = "Adapted from danlogs youtube video tutorial"
readme = "README.md"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.1.3"
structopt-derive = "0.1.3"
colored = "2.0.0"
failure = "0.1.8"
exitfailure = "0.5.1"
assert_cmd = "1.0.3"
predicates = "1.0.7"